--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <a href="#" class="ms-3">Features</a>
       <a href="#" class="ms-3">Team</a>
       <a href="#" class="ms-3">Sign in</a>
+      <a href="#" class="ms-3"> sign in</a>
     </div>
   </nav>
 
